crates/rsonpath-lib/tests/snapshots/engine_serialization_snapshots__ron__jsonpath_example_query_32.snap
---
source: crates/rsonpath-lib/tests/engine_serialization_snapshots.rs
expression: "&engine(\"$..phoneNumbers[*].number\")?"
---
(V1, Automaton(
  states: [
    StateTable(
      attributes: StateAttributes(2),
      member_transitions: [],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(0),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            112,
            104,
            111,
            110,
            101,
            78,
            117,
            109,
            98,
            101,
            114,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(808923184, 1),
            SlashUSingle(943075376, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(1697919024, 1),
            SlashUSingle(892809264, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(842412080, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 14,
          len_limit: 74,
        ), State(2)),
      ],
      array_transitions: [],
      fallback_state: State(1),
    ),
    StateTable(
      attributes: StateAttributes(0),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            112,
            104,
            111,
            110,
            101,
            78,
            117,
            109,
            98,
            101,
            114,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(808923184, 1),
            SlashUSingle(943075376, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(1697919024, 1),
            SlashUSingle(892809264, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(842412080, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 14,
          len_limit: 74,
        ), State(4)),
      ],
      array_transitions: [],
      fallback_state: State(3),
    ),
    StateTable(
      attributes: StateAttributes(8),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            112,
            104,
            111,
            110,
            101,
            78,
            117,
            109,
            98,
            101,
            114,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(808923184, 1),
            SlashUSingle(943075376, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(1697919024, 1),
            SlashUSingle(892809264, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(842412080, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 14,
          len_limit: 74,
        ), State(2)),
        (StringPattern(
          bytes: [
            34,
            110,
            117,
            109,
            98,
            101,
            114,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(1698050096, 1),
            SlashUSingle(892809264, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(842412080, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(842477616, 1),
            None,
          ],
          len: 8,
          len_limit: 38,
        ), State(6)),
      ],
      array_transitions: [],
      fallback_state: State(1),
    ),
    StateTable(
      attributes: StateAttributes(8),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            112,
            104,
            111,
            110,
            101,
            78,
            117,
            109,
            98,
            101,
            114,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(808923184, 1),
            SlashUSingle(943075376, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(1697919024, 1),
            SlashUSingle(892809264, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(842412080, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 14,
          len_limit: 74,
        ), State(4)),
        (StringPattern(
          bytes: [
            34,
            110,
            117,
            109,
            98,
            101,
            114,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(1698050096, 1),
            SlashUSingle(892809264, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(842412080, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(842477616, 1),
            None,
          ],
          len: 8,
          len_limit: 38,
        ), State(5)),
      ],
      array_transitions: [],
      fallback_state: State(3),
    ),
    StateTable(
      attributes: StateAttributes(9),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            112,
            104,
            111,
            110,
            101,
            78,
            117,
            109,
            98,
            101,
            114,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(808923184, 1),
            SlashUSingle(943075376, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(1697919024, 1),
            SlashUSingle(892809264, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(842412080, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 14,
          len_limit: 74,
        ), State(2)),
        (StringPattern(
          bytes: [
            34,
            110,
            117,
            109,
            98,
            101,
            114,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(1698050096, 1),
            SlashUSingle(892809264, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(842412080, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(842477616, 1),
            None,
          ],
          len: 8,
          len_limit: 38,
        ), State(6)),
      ],
      array_transitions: [],
      fallback_state: State(1),
    ),
    StateTable(
      attributes: StateAttributes(1),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            112,
            104,
            111,
            110,
            101,
            78,
            117,
            109,
            98,
            101,
            114,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(808923184, 1),
            SlashUSingle(943075376, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(1697919024, 1),
            SlashUSingle(892809264, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(842412080, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 14,
          len_limit: 74,
        ), State(2)),
      ],
      array_transitions: [],
      fallback_state: State(1),
    ),
  ],
))
