crates/rsonpath-lib/tests/snapshots/engine_serialization_snapshots__ron__readme_query_32.snap
---
source: crates/rsonpath-lib/tests/engine_serialization_snapshots.rs
expression: "&engine(\"$.jsonpath[*]\")?"
---
(V1, Automaton(
  states: [
    StateTable(
      attributes: StateAttributes(2),
      member_transitions: [],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            106,
            115,
            111,
            110,
            112,
            97,
            116,
            104,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(1630941232, 1),
            SlashUSingle(859254832, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(808923184, 1),
            SlashUSingle(825634864, 1),
            SlashUSingle(876032048, 1),
            SlashUSingle(943075376, 1),
            None,
          ],
          len: 10,
          len_limit: 50,
        ), State(2)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(8),
      member_transitions: [],
      array_transitions: [],
      fallback_state: State(3),
    ),
    StateTable(
      attributes: StateAttributes(1),
      member_transitions: [],
      array_transitions: [],
      fallback_state: State(0),
    ),
  ],
))
