crates/rsonpath-lib/tests/snapshots/engine_serialization_snapshots__ron__real_life_query.snap
---
source: crates/rsonpath-lib/tests/engine_serialization_snapshots.rs
expression: "&engine(\"$.personal.details.contact.information.phones.home\")?"
snapshot_kind: text
---
(V1, Automaton(
  states: [
    StateTable(
      attributes: StateAttributes(2),
      member_transitions: [],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(JsonString(
          quoted: "\"personal\"",
        )), State(2)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(JsonString(
          quoted: "\"details\"",
        )), State(3)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(JsonString(
          quoted: "\"contact\"",
        )), State(4)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(JsonString(
          quoted: "\"information\"",
        )), State(5)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(JsonString(
          quoted: "\"phones\"",
        )), State(6)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(12),
      member_transitions: [
        (StringPattern(JsonString(
          quoted: "\"home\"",
        )), State(7)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(1),
      member_transitions: [],
      array_transitions: [],
      fallback_state: State(0),
    ),
  ],
))
